--- a/ybdb-xp.yml
+++ b/ybdb-xp.yml
@@ -2,7 +2,7 @@
 version: '3.8'
 services:
   ybdbdemo-app:
-    image: ybdbdemo
+    image: humourmind/ybdb-xp:1.0.0
     environment:
       - _JAVA_OPTIONS=-Xmx512m -Xms256m
       - SPRING_PROFILES_ACTIVE=prod,api-docs
