--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,7 @@ tasks:
     command: |
       gp ports await 5433
       sleep 10
-      docker exec -e -it ybdb /home/yugabyte/tserver/bin/ysqlsh -h 0.0.0.0 -U yugabyte -d yugabyte
+      docker exec -e PGPASSWORD=ybdbdemo -it ybdb /home/yugabyte/tserver/bin/ysqlsh -h 0.0.0.0 -U ybdbdemo -d ybdbdemo
   - name: ybdb-xp
     init: |
       docker-compose -f ybdb-xp.yml pull
